--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -146,7 +146,8 @@ nav {
     font-family: "OpenSans-Bold";
     border: solid 6px #212225;
     border-radius: 20px;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    outline: none; }
     .button-wrapper > button:not(.negative) {
       background: #99cd32;
       background: -moz-linear-gradient(top, #99cd32 0%, #81b01a 51%, #638513 100%);
@@ -156,6 +157,16 @@ nav {
       background: -ms-linear-gradient(top, #99cd32 0%, #81b01a 51%, #638513 100%);
       background: linear-gradient(to bottom, #99cd32 0%, #81b01a 51%, #638513 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99cd32', endColorstr='#638513', GradientType=0 ); }
+      .button-wrapper > button:not(.negative):active {
+        color: #3e5214;
+        background: #628011;
+        background: -moz-linear-gradient(top, #628011 0%, #698f11 51%, #83b02a 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, #628011), color-stop(51%, #698f11), color-stop(100%, #83b02a));
+        background: -webkit-linear-gradient(top, #628011 0%, #698f11 51%, #83b02a 100%);
+        background: -o-linear-gradient(top, #628011 0%, #698f11 51%, #83b02a 100%);
+        background: -ms-linear-gradient(top, #628011 0%, #698f11 51%, #83b02a 100%);
+        background: linear-gradient(to bottom, #628011 0%, #698f11 51%, #83b02a 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#628011', endColorstr='#83b02a', GradientType=0 ); }
     .button-wrapper > button.negative {
       color: yellowgreen;
       background-color: #32373C;
