--- a/styles/sass/resultpage.scss
+++ b/styles/sass/resultpage.scss
@@ -39,6 +39,7 @@
     border: solid 6px darken($dark-color, 5%);
     border-radius: 20px;
     box-sizing: border-box;
+    outline: none;
 
     &:not(.negative){
       background: rgba(153,205,50,1);
@@ -49,6 +50,19 @@
       background: -ms-linear-gradient(top, rgba(153,205,50,1) 0%, rgba(129,176,26,1) 51%, rgba(99,133,19,1) 100%);
       background: linear-gradient(to bottom, rgba(153,205,50,1) 0%, rgba(129,176,26,1) 51%, rgba(99,133,19,1) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99cd32', endColorstr='#638513', GradientType=0 );
+
+      &:active{
+        color: darken(yellowgreen, 30%);
+
+        background: rgba(98,128,17,1);
+        background: -moz-linear-gradient(top, rgba(98,128,17,1) 0%, rgba(105,143,17,1) 51%, rgba(131,176,42,1) 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(98,128,17,1)), color-stop(51%, rgba(105,143,17,1)), color-stop(100%, rgba(131,176,42,1)));
+        background: -webkit-linear-gradient(top, rgba(98,128,17,1) 0%, rgba(105,143,17,1) 51%, rgba(131,176,42,1) 100%);
+        background: -o-linear-gradient(top, rgba(98,128,17,1) 0%, rgba(105,143,17,1) 51%, rgba(131,176,42,1) 100%);
+        background: -ms-linear-gradient(top, rgba(98,128,17,1) 0%, rgba(105,143,17,1) 51%, rgba(131,176,42,1) 100%);
+        background: linear-gradient(to bottom, rgba(98,128,17,1) 0%, rgba(105,143,17,1) 51%, rgba(131,176,42,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#628011', endColorstr='#83b02a', GradientType=0 );
+      }
     }
 
     &.negative{
