--- a/styles/sass/progressbar.scss
+++ b/styles/sass/progressbar.scss
@@ -10,7 +10,7 @@
 
   & > .bar{
     height: 100%;
-    width: 100%;
+    width: 0px;
     background-color: yellowgreen;
     border-radius: inherit;
     position: relative;
